# full_stack_automation

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: manual-run.yml  nightly-regression.yml  pr-validation.yml  run-standalone-suite.yml  standalone-pr-validation.yml
docs/: coding-standards.md  dynamic-user-lifecycle.md  final-optimization-pass.md  fixture-strategy.md  reporting-and-ci.md  rwa-alignment-report.md  seeded-business-data-slice.md  target-architecture.md  verified-notification-creation-behavior.md  verified-notification-read-state-behavior.md
src/fixtures/: api_fixtures.py  auth_fixtures.py  browser_fixtures.py  core_fixtures.py  data_fixtures.py  db_fixtures.py  hooks.py
tests/: conftest.py
tests/api/: conftest.py  test_auth_service.py  test_send_money_service.py  test_transaction_comment_notification_read_service.py  test_transaction_comment_notification_service.py  test_transaction_comment_service.py  test_transaction_detail_service.py  test_transactions_service.py
tests/db/: conftest.py  test_send_money_persistence.py  test_transaction_comment_notification_read_repository.py  test_transaction_comment_notification_repository.py  test_transaction_comment_repository.py  test_transaction_detail_repository.py  test_transactions_repository.py  test_users_repository.py
tests/e2e/: conftest.py  test_seeded_home_feed_vertical_slice.py  test_seeded_send_money_vertical_slice.py  test_sign_in_vertical_slice.py  test_transaction_comment_notification_read_vertical_slice.py  test_transaction_comment_vertical_slice.py  (+2 more)
(+70 files in other folders)
